pagina-busqueda-ia

--- a/dashboard-fiscalia/index.html
+++ b/dashboard-fiscalia/index.html
@@ -48,6 +48,11 @@
                         <i class="fas fa-file-csv"></i>
                         <span>Seleccionar archivos CSV</span>
                     </label>
+                    
+                    <!-- Botón de prueba temporal -->
+                    <button id="testLoadBtn" style="margin-top: 10px; padding: 10px; background: var(--neon-green); color: #000; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+                        🧪 CARGAR ARCHIVO DE PRUEBA (datos_ejemplo.csv)
+                    </button>
                 </div>
                 <div class="file-list" id="fileList"></div>
                 <button id="processBtn" class="process-btn" disabled>
